bagian produk(lihat, lihat berdasar id, tambah), bagian news(logika random news)
