# routes/index.js
@@ -13,14 +13,27 @@ import {
 
 } from '../controller/UserController.js';
 
+import { 
+    getAllProducts, 
+    getProductById, 
+    createProduct
+} from '../controller/ProductController.js';
+
 import { verifyToken } from '../middleware/VerifyToken.js';
 import { refreshToken } from '../controller/RefreshToken.js';
 import { fetchNews } from '../controller/NewsController.js';
 import { hardLimiter } from '../middleware/limiter.js';
 const router = express.Router();
 
+//news
+router.get('/news', verifyToken, fetchNews);
 
-router.get('/news', fetchNews);
+//produk
+router.get('/product', verifyToken, getAllProducts);
+router.get('/product/:id', verifyToken, getProductById);
+router.post('/product', verifyToken, createProduct);
+
+
 router.get('/users',verifyToken, getUser);
 router.get('/profile', verifyToken, profile)
 router.post('/register', Register);
